# app/serializers/serializable_comment.rb
@@ -1,0 +1,9 @@
+# frozen_string_literal: true
+
+class SerializableComment < BaseSerializable
+  type "comments"
+
+  attributes :content
+
+  belongs_to :post
+end
