# app/serializers/serializable_post.rb
@@ -4,4 +4,6 @@ class SerializablePost < BaseSerializable
   type "posts"
 
   attributes :title, :content, :published
+
+  has_many :comments
 end
